--- a/react-practice/css/style.css
+++ b/react-practice/css/style.css
@@ -16,17 +16,6 @@ body {
     flex-wrap: wrap;
 }
 
-.container a {
-    width: 100px;
-    height: 100px;
-    line-height: 100px;
-    text-align: center;
-    cursor: pointer;
-    user-select: none;
-    border-radius: 5px;
-    margin: auto;
-}
-
 .container li {
     width: 100px;
     height: 100px;
@@ -35,5 +24,12 @@ body {
     cursor: pointer;
     user-select: none;
     border-radius: 5px;
-    margin: auto;
+    margin: 0 5px 10px;
+}
+
+.container div {
+    text-align: right;
+    padding: 5px;
+    font-size: 12px;
+    font-weight: bold;
 }
